--- a/index.html
+++ b/index.html
@@ -131,11 +131,21 @@
       cursor: pointer;
       box-shadow: 0 4px 12px rgba(255,255,255,0.3);
       transition: transform 0.2s, background 0.3s;
+      animation: float 3s ease-in-out infinite;
     }
 
     #duckButton:hover {
       transform: scale(1.15);
       background: rgba(255, 255, 255, 0.4);
+    }
+
+    @keyframes float {
+      0%, 100% {
+        transform: translateY(0px);
+      }
+      50% {
+        transform: translateY(-10px);
+      }
     }
 
     #result {
@@ -146,9 +156,14 @@
       text-shadow: 0 0 8px #ffd700, 0 0 15px #ffa500;
       user-select: text;
       word-break: break-word;
-      cursor: default;
+      cursor: pointer;
       display: inline-block;
       transition: transform 0.3s ease;
+    }
+
+    #result a {
+      color: #ffd700;
+      text-decoration: none;
     }
 
     .only-result #result {
@@ -186,7 +201,7 @@
     <button id="fullscreenBtn" class="inputs" onclick="openFullscreen()">เปิดเต็มจอ</button>
     <button id="exitFullscreenBtn" class="inputs hidden" onclick="closeFullscreen()">ออกจากเต็มจอ</button>
     <button onclick="window.location.href='songs.html'" id="duckButton" title="ไปหน้าเพลง">🦆</button>
-    <h3 id="result"></h3>
+    <h3 id="result" onclick="toggleView()"></h3>
   </div>
 
   <script>
@@ -212,13 +227,13 @@
       }
 
       const avg = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
-      fullResult = avg;
-
-      // แสดงผลเป็นลิงก์คลิกได้ไปหน้า average.html พร้อมส่งค่า avg ผ่าน URL
-      resultEl.innerHTML = `<a href="average.html?avg=${encodeURIComponent(avg)}" style="color:#ffd700; text-decoration: underline;">เฉลี่ยออเดอร์ต่อวัน: ${avg}</a>`;
+      fullResult = `<a href="average.html?avg=${encodeURIComponent(avg)}">เฉลี่ยออเดอร์ต่อวัน: ${avg}</a>`;
+      resultEl.innerHTML = fullResult;
       showOnlyResult = false;
 
-      document.querySelectorAll('.inputs').forEach(el => el.classList.remove('hidden'));
+      document.querySelectorAll('.inputs').forEach(el => {
+        el.classList.remove('hidden');
+      });
       fullscreenBtn.classList.remove('hidden');
       exitFullscreenBtn.classList.add('hidden');
       container.classList.remove('only-result');
@@ -229,32 +244,71 @@
       }, 300);
     }
 
-    // ไม่มี toggleView() เพราะผลลัพธ์เป็นลิงก์แล้ว ไม่ต้องซ่อน input
+    async function toggleView() {
+      if (!fullResult) return;
 
-    // ฟังก์ชัน full screen
-    function openFullscreen() {
-      if (container.requestFullscreen) {
-        container.requestFullscreen();
-      } else if (container.webkitRequestFullscreen) { /* Safari */
-        container.webkitRequestFullscreen();
-      } else if (container.msRequestFullscreen) { /* IE11 */
-        container.msRequestFullscreen();
+      if (showOnlyResult) {
+        document.querySelectorAll('.inputs').forEach(el => {
+          el.classList.remove('hidden');
+        });
+        container.classList.remove('landscape-view', 'only-result');
+        resultEl.innerHTML = fullResult;
+        showOnlyResult = false;
+
+        if (document.fullscreenElement) {
+          await document.exitFullscreen();
+        }
+      } else {
+        document.querySelectorAll('.inputs').forEach(el => {
+          el.classList.add('hidden');
+        });
+        resultEl.classList.remove('hidden');
+        resultEl.innerHTML = fullResult;
+        showOnlyResult = true;
+        container.classList.add('only-result');
+
+        if (isMobile()) {
+          try {
+            if (!document.fullscreenElement) {
+              await container.requestFullscreen();
+            }
+            if (screen.orientation && screen.orientation.lock) {
+              await screen.orientation.lock('landscape');
+            }
+          } catch (err) {
+            console.warn('ไม่สามารถล็อคแนวนอนได้:', err);
+          }
+          container.classList.add('landscape-view');
+        }
       }
+    }
+
+    function openFullscreen() {
+      const elem = document.documentElement;
+      if (elem.requestFullscreen) elem.requestFullscreen();
+      else if (elem.webkitRequestFullscreen) elem.webkitRequestFullscreen();
+      else if (elem.msRequestFullscreen) elem.msRequestFullscreen();
+
       fullscreenBtn.classList.add('hidden');
       exitFullscreenBtn.classList.remove('hidden');
     }
 
     function closeFullscreen() {
-      if (document.exitFullscreen) {
-        document.exitFullscreen();
-      } else if (document.webkitExitFullscreen) { /* Safari */
-        document.webkitExitFullscreen();
-      } else if (document.msExitFullscreen) { /* IE11 */
-        document.msExitFullscreen();
-      }
+      if (document.exitFullscreen) document.exitFullscreen();
+      else if (document.webkitExitFullscreen) document.webkitExitFullscreen();
+      else if (document.msExitFullscreen) document.msExitFullscreen();
+
       fullscreenBtn.classList.remove('hidden');
       exitFullscreenBtn.classList.add('hidden');
     }
+
+    document.addEventListener('fullscreenchange', () => {
+      if (!document.fullscreenElement) {
+        fullscreenBtn.classList.remove('hidden');
+        exitFullscreenBtn.classList.add('hidden');
+        container.classList.remove('landscape-view');
+      }
+    });
   </script>
 </body>
 </html>
