--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
       font-family: 'Sarabun', sans-serif;
       margin: 0;
       height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       background: linear-gradient(135deg, #323232, #1a1a1a);
       color: white;
       user-select: none;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     body::before {
@@ -52,7 +49,7 @@
       text-align: center;
       position: relative;
       color: white;
-      transition: width 0.3s ease, height 0.3s ease;
+      margin: 40px auto;
     }
 
     h2 {
@@ -120,38 +117,10 @@
       box-shadow: 0 5px 18px rgba(40, 185, 153, 0.8);
     }
 
-    #duckButton {
-      margin-top: 15px;
-      padding: 12px;
-      font-size: 1.5rem;
-      border: none;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.2);
-      color: #fff;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(255,255,255,0.3);
-      transition: transform 0.2s, background 0.3s;
-      animation: float 3s ease-in-out infinite;
-    }
-
-    #duckButton:hover {
-      transform: scale(1.15);
-      background: rgba(255, 255, 255, 0.4);
-    }
-
-    @keyframes float {
-      0%, 100% {
-        transform: translateY(0px);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-    }
-
     #result {
       margin-top: 28px;
       font-weight: 700;
-      font-size: 2rem;
+      font-size: 1.8rem;
       color: #ffd700;
       text-shadow: 0 0 8px #ffd700, 0 0 15px #ffa500;
       user-select: text;
@@ -159,11 +128,6 @@
       cursor: pointer;
       display: inline-block;
       transition: transform 0.3s ease;
-    }
-
-    #result a {
-      color: #ffd700;
-      text-decoration: none;
     }
 
     .only-result #result {
@@ -184,9 +148,52 @@
       align-items: center;
     }
 
+    #averageLink {
+      text-decoration: none;
+      color: #ffd700;
+      font-size: 2rem;
+      font-weight: bold;
+      display: block;
+      text-align: center;
+      margin-top: 25px;
+      text-shadow: 0 0 8px #ffd700, 0 0 15px #ffa500;
+    }
+
     @media (max-width: 600px) {
       .container {
         padding: 25px;
+      }
+    }
+
+    /* เป็ดลอยมุมขวาล่าง */
+    #duckButton {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 999;
+      padding: 12px;
+      font-size: 1.5rem;
+      border: none;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.2);
+      color: #fff;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(255,255,255,0.3);
+      transition: transform 0.2s, background 0.3s;
+      animation: float 3s ease-in-out infinite;
+    }
+
+    #duckButton:hover {
+      transform: scale(1.15);
+      background: rgba(255, 255, 255, 0.4);
+    }
+
+    @keyframes float {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-10px);
       }
     }
   </style>
@@ -200,9 +207,11 @@
     <button onclick="calculate()" class="inputs">คำนวณ</button>
     <button id="fullscreenBtn" class="inputs" onclick="openFullscreen()">เปิดเต็มจอ</button>
     <button id="exitFullscreenBtn" class="inputs hidden" onclick="closeFullscreen()">ออกจากเต็มจอ</button>
-    <button onclick="window.location.href='songs.html'" id="duckButton" title="ไปหน้าเพลง">🦆</button>
+    <a href="average.html" id="averageLink">ค่าเฉลี่ยออเดอร์ต่อวัน ➜</a>
     <h3 id="result" onclick="toggleView()"></h3>
   </div>
+
+  <button onclick="window.location.href='songs.html'" id="duckButton" title="ไปหน้าเพลง">🦆</button>
 
   <script>
     let fullResult = '';
@@ -226,52 +235,40 @@
         return;
       }
 
-      const avg = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
-      fullResult = `<a href="average.html?avg=${encodeURIComponent(avg)}">เฉลี่ยออเดอร์ต่อวัน: ${avg}</a>`;
-      resultEl.innerHTML = fullResult;
+      const result = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
+      fullResult = `เฉลี่ยออเดอร์ต่อวัน: ${result}`;
+      resultEl.innerText = fullResult;
       showOnlyResult = false;
 
-      document.querySelectorAll('.inputs').forEach(el => {
-        el.classList.remove('hidden');
-      });
+      document.querySelectorAll('.inputs').forEach(el => el.classList.remove('hidden'));
       fullscreenBtn.classList.remove('hidden');
       exitFullscreenBtn.classList.add('hidden');
       container.classList.remove('only-result');
 
       resultEl.style.transform = 'scale(1.1)';
-      setTimeout(() => {
-        resultEl.style.transform = 'scale(1)';
-      }, 300);
+      setTimeout(() => resultEl.style.transform = 'scale(1)', 300);
     }
 
     async function toggleView() {
       if (!fullResult) return;
 
       if (showOnlyResult) {
-        document.querySelectorAll('.inputs').forEach(el => {
-          el.classList.remove('hidden');
-        });
+        document.querySelectorAll('.inputs').forEach(el => el.classList.remove('hidden'));
         container.classList.remove('landscape-view', 'only-result');
-        resultEl.innerHTML = fullResult;
+        resultEl.innerText = fullResult;
         showOnlyResult = false;
 
-        if (document.fullscreenElement) {
-          await document.exitFullscreen();
-        }
+        if (document.fullscreenElement) await document.exitFullscreen();
       } else {
-        document.querySelectorAll('.inputs').forEach(el => {
-          el.classList.add('hidden');
-        });
+        document.querySelectorAll('.inputs').forEach(el => el.classList.add('hidden'));
         resultEl.classList.remove('hidden');
-        resultEl.innerHTML = fullResult;
+        resultEl.innerText = fullResult;
         showOnlyResult = true;
         container.classList.add('only-result');
 
         if (isMobile()) {
           try {
-            if (!document.fullscreenElement) {
-              await container.requestFullscreen();
-            }
+            if (!document.fullscreenElement) await container.requestFullscreen();
             if (screen.orientation && screen.orientation.lock) {
               await screen.orientation.lock('landscape');
             }
