--- a/index.html
+++ b/index.html
@@ -6,36 +6,29 @@
   <title>คำนวณออเดอร์เฉลี่ย</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
-
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
       font-family: 'Sarabun', sans-serif;
       margin: 0;
       height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       background: linear-gradient(135deg, #323232, #1a1a1a);
       color: white;
-      user-select: none;
-      overflow-x: hidden;
+      overflow: hidden;
     }
-
     body::before {
       content: "";
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
       background-image: url('bg.webp');
       background-size: cover;
       background-position: center;
-      background-repeat: no-repeat;
       filter: blur(6px) brightness(0.5);
       z-index: -1;
     }
-
     .container {
       background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
@@ -44,186 +37,97 @@
       max-width: 420px;
       box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
       backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      border: 1px solid rgba(255, 255, 255, 0.18);
       text-align: center;
       position: relative;
       color: white;
-      margin: 40px auto;
     }
-
     h2 {
       margin-bottom: 25px;
-      font-weight: 600;
       font-size: 1.8rem;
       text-shadow: 0 2px 6px rgba(0,0,0,0.4);
     }
-
     input[type="number"] {
-      width: 100%;
-      padding: 14px 15px;
-      margin: 12px 0;
-      border: none;
-      border-radius: 12px;
+      width: 100%; padding: 14px 15px; margin: 12px 0;
+      border: none; border-radius: 12px;
       font-size: 1.1rem;
-      outline: none;
       background: rgba(255, 255, 255, 0.25);
       color: white;
       box-shadow: inset 0 0 8px rgba(255,255,255,0.15);
-      transition: background 0.3s ease;
     }
-
-    input[type="number"]::placeholder {
-      color: rgba(255, 255, 255, 0.7);
-    }
-
-    input[type="number"]:focus {
-      background: rgba(255, 255, 255, 0.45);
-      box-shadow: 0 0 12px 2px rgba(255,255,255,0.6);
-    }
-
+    input::placeholder { color: rgba(255,255,255,0.7); }
     button {
-      width: 100%;
-      padding: 16px 0;
-      margin-top: 18px;
+      width: 100%; padding: 16px 0; margin-top: 18px;
       font-size: 1.1rem;
-      font-weight: 600;
       color: #fff;
       background: linear-gradient(45deg, #667eea, #764ba2);
-      border: none;
-      border-radius: 15px;
+      border: none; border-radius: 15px;
       cursor: pointer;
-      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.6);
-      transition: background 0.3s ease, box-shadow 0.3s ease;
     }
-
-    button:hover {
-      background: linear-gradient(45deg, #5563d6, #6b3ea3);
-      box-shadow: 0 6px 20px rgba(85, 99, 214, 0.8);
-    }
-
     #fullscreenBtn, #exitFullscreenBtn {
-      margin-top: 10px;
-      padding: 10px 0;
+      margin-top: 10px; padding: 10px 0;
       font-size: 1rem;
-      font-weight: 600;
       border-radius: 12px;
       background: linear-gradient(45deg, #34ace0, #33d9b2);
-      box-shadow: 0 3px 12px rgba(51, 217, 178, 0.6);
+    }
+    #exitFullscreenBtn { display: none; }
+
+    #duck {
+      position: fixed;
+      right: 20px;
+      bottom: 30px;
+      font-size: 2.2rem;
+      background: rgba(255,255,255,0.2);
+      padding: 10px 12px;
+      border-radius: 50%;
+      cursor: pointer;
+      z-index: 999;
+      animation: float 3s ease-in-out infinite;
+      transition: transform 0.3s ease;
+    }
+    #duck:hover {
+      background: rgba(255,255,255,0.4);
+      transform: scale(1.2);
     }
 
-    #fullscreenBtn:hover, #exitFullscreenBtn:hover {
-      background: linear-gradient(45deg, #2c99cc, #28b999);
-      box-shadow: 0 5px 18px rgba(40, 185, 153, 0.8);
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
     #result {
       margin-top: 28px;
       font-weight: 700;
-      font-size: 1.8rem;
-      color: #ffd700;
-      text-shadow: 0 0 8px #ffd700, 0 0 15px #ffa500;
-      user-select: text;
-      word-break: break-word;
-      cursor: pointer;
-      display: inline-block;
-      transition: transform 0.3s ease;
-    }
-
-    .only-result #result {
-      font-size: 7vw !important;
-      padding: 0 !important;
-      background: none !important;
-    }
-
-    .hidden {
-      display: none !important;
-    }
-
-    .landscape-view {
-      width: 95vw !important;
-      height: 70vh !important;
-      display: flex !important;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #averageLink {
-      text-decoration: none;
-      color: #ffd700;
       font-size: 2rem;
-      font-weight: bold;
-      display: block;
-      text-align: center;
-      margin-top: 25px;
+      color: #ffd700;
       text-shadow: 0 0 8px #ffd700, 0 0 15px #ffa500;
+      cursor: pointer;
+      user-select: none;
+      text-decoration: none;
     }
 
     @media (max-width: 600px) {
-      .container {
-        padding: 25px;
-      }
-    }
-
-    /* เป็ดลอยมุมขวาล่าง */
-    #duckButton {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 999;
-      padding: 12px;
-      font-size: 1.5rem;
-      border: none;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, 0.2);
-      color: #fff;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(255,255,255,0.3);
-      transition: transform 0.2s, background 0.3s;
-      animation: float 3s ease-in-out infinite;
-    }
-
-    #duckButton:hover {
-      transform: scale(1.15);
-      background: rgba(255, 255, 255, 0.4);
-    }
-
-    @keyframes float {
-      0%, 100% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
+      .container { padding: 25px; }
     }
   </style>
 </head>
 <body>
   <div class="container" id="container">
-    <h2 class="inputs">คำนวณออเดอร์เฉลี่ยต่อเดือน</h2>
-    <input id="sku" type="number" placeholder="กรอก SKU" class="inputs" />
-    <input id="mu" type="number" placeholder="กรอก MU" class="inputs" />
-    <input id="days" type="number" placeholder="จำนวนวันทำงาน" class="inputs" />
-    <button onclick="calculate()" class="inputs">คำนวณ</button>
-    <button id="fullscreenBtn" class="inputs" onclick="openFullscreen()">เปิดเต็มจอ</button>
-    <button id="exitFullscreenBtn" class="inputs hidden" onclick="closeFullscreen()">ออกจากเต็มจอ</button>
-    <a href="average.html" id="averageLink">ค่าเฉลี่ยออเดอร์ต่อวัน ➜</a>
-    <h3 id="result" onclick="toggleView()"></h3>
+    <h2>คำนวณออเดอร์เฉลี่ยต่อวัน</h2>
+    <input id="sku" type="number" placeholder="กรอก SKU" />
+    <input id="mu" type="number" placeholder="กรอก MU" />
+    <input id="days" type="number" placeholder="จำนวนวันทำงาน" />
+    <button onclick="calculate()">คำนวณ</button>
+    <button id="fullscreenBtn" onclick="openFullscreen()">เปิดเต็มจอ</button>
+    <button id="exitFullscreenBtn" onclick="closeFullscreen()">ออกจากเต็มจอ</button>
+    <div id="result"></div>
   </div>
-
-  <button onclick="window.location.href='songs.html'" id="duckButton" title="ไปหน้าเพลง">🦆</button>
+  <div id="duck" onclick="window.location.href='songs.html'" title="ไปหน้าเพลง">🦆</div>
 
   <script>
     let fullResult = '';
-    let showOnlyResult = false;
-    const container = document.getElementById('container');
     const resultEl = document.getElementById('result');
     const fullscreenBtn = document.getElementById('fullscreenBtn');
     const exitFullscreenBtn = document.getElementById('exitFullscreenBtn');
-
-    function isMobile() {
-      return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile|WPDesktop/i.test(navigator.userAgent);
-    }
 
     function calculate() {
       const sku = parseFloat(document.getElementById('sku').value);
@@ -236,74 +140,30 @@
       }
 
       const result = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
-      fullResult = `เฉลี่ยออเดอร์ต่อวัน: ${result}`;
-      resultEl.innerText = fullResult;
-      showOnlyResult = false;
-
-      document.querySelectorAll('.inputs').forEach(el => el.classList.remove('hidden'));
-      fullscreenBtn.classList.remove('hidden');
-      exitFullscreenBtn.classList.add('hidden');
-      container.classList.remove('only-result');
-
-      resultEl.style.transform = 'scale(1.1)';
-      setTimeout(() => resultEl.style.transform = 'scale(1)', 300);
-    }
-
-    async function toggleView() {
-      if (!fullResult) return;
-
-      if (showOnlyResult) {
-        document.querySelectorAll('.inputs').forEach(el => el.classList.remove('hidden'));
-        container.classList.remove('landscape-view', 'only-result');
-        resultEl.innerText = fullResult;
-        showOnlyResult = false;
-
-        if (document.fullscreenElement) await document.exitFullscreen();
-      } else {
-        document.querySelectorAll('.inputs').forEach(el => el.classList.add('hidden'));
-        resultEl.classList.remove('hidden');
-        resultEl.innerText = fullResult;
-        showOnlyResult = true;
-        container.classList.add('only-result');
-
-        if (isMobile()) {
-          try {
-            if (!document.fullscreenElement) await container.requestFullscreen();
-            if (screen.orientation && screen.orientation.lock) {
-              await screen.orientation.lock('landscape');
-            }
-          } catch (err) {
-            console.warn('ไม่สามารถล็อคแนวนอนได้:', err);
-          }
-          container.classList.add('landscape-view');
-        }
-      }
+      fullResult = result;
+      resultEl.innerText = `เฉลี่ยออเดอร์ต่อวัน: ${result}`;
+      resultEl.onclick = () => {
+        window.location.href = `average.html?result=${encodeURIComponent(result)}`;
+      };
     }
 
     function openFullscreen() {
       const elem = document.documentElement;
       if (elem.requestFullscreen) elem.requestFullscreen();
-      else if (elem.webkitRequestFullscreen) elem.webkitRequestFullscreen();
-      else if (elem.msRequestFullscreen) elem.msRequestFullscreen();
-
-      fullscreenBtn.classList.add('hidden');
-      exitFullscreenBtn.classList.remove('hidden');
+      fullscreenBtn.style.display = 'none';
+      exitFullscreenBtn.style.display = 'block';
     }
 
     function closeFullscreen() {
       if (document.exitFullscreen) document.exitFullscreen();
-      else if (document.webkitExitFullscreen) document.webkitExitFullscreen();
-      else if (document.msExitFullscreen) document.msExitFullscreen();
-
-      fullscreenBtn.classList.remove('hidden');
-      exitFullscreenBtn.classList.add('hidden');
+      fullscreenBtn.style.display = 'block';
+      exitFullscreenBtn.style.display = 'none';
     }
 
     document.addEventListener('fullscreenchange', () => {
       if (!document.fullscreenElement) {
-        fullscreenBtn.classList.remove('hidden');
-        exitFullscreenBtn.classList.add('hidden');
-        container.classList.remove('landscape-view');
+        fullscreenBtn.style.display = 'block';
+        exitFullscreenBtn.style.display = 'none';
       }
     });
   </script>
