--- a/average.html
+++ b/average.html
@@ -61,10 +61,9 @@
       margin-bottom: 30px;
     }
 
-    .home-button {
+    .home-button, .fullscreen-button {
       position: fixed;
       bottom: 20px;
-      right: 20px;
       font-size: 3.5rem;
       cursor: pointer;
       user-select: none;
@@ -88,9 +87,17 @@
       line-height: 1;
       text-decoration: none;
       z-index: 10;
+      user-select: none;
+    }
+    .home-button {
+      right: 20px;
+    }
+    .fullscreen-button {
+      right: 80px;
+      display: none; /* แสดงเฉพาะแนวตั้ง */
     }
 
-    .home-button:hover {
+    .home-button:hover, .fullscreen-button:hover {
       color: #fff;
       text-shadow:
         0 0 10px #fff,
@@ -108,27 +115,6 @@
       50% { transform: translateY(-10px); }
     }
 
-    #fullscreenBtn {
-      display: none;
-      position: fixed;
-      bottom: 90px;
-      right: 20px;
-      background: #ffd700;
-      border-radius: 12px;
-      padding: 12px 18px;
-      font-weight: bold;
-      font-size: 1.1rem;
-      color: #222;
-      cursor: pointer;
-      box-shadow: 0 0 10px #ffd700;
-      user-select: none;
-      transition: background 0.3s ease;
-      z-index: 15;
-    }
-    #fullscreenBtn:hover {
-      background: #ffaa00;
-    }
-
     @media (max-width: 600px) {
       #avgResult {
         font-size: 1.8rem;
@@ -140,15 +126,12 @@
         font-size: 1.1rem;
         margin-bottom: 20px;
       }
-      .home-button {
+      .home-button, .fullscreen-button {
         font-size: 2.8rem;
         padding: 8px;
       }
-      #fullscreenBtn {
-        font-size: 1rem;
-        padding: 10px 14px;
-        bottom: 80px;
-        right: 16px;
+      .fullscreen-button {
+        right: 70px;
       }
     }
   </style>
@@ -158,7 +141,7 @@
   <div id="avgResult">กำลังโหลด...</div>
   <div class="message" id="messageText"></div>
 
-  <button id="fullscreenBtn" aria-label="แสดงผลเต็มหน้าจอ">📱 แสดงผลเต็มหน้าจอ</button>
+  <button class="fullscreen-button" id="fullscreenBtn" aria-label="แสดงผลเต็มหน้าจอ">📱</button>
   <a href="index.html" class="home-button" title="กลับหน้าแรก" aria-label="กลับหน้าแรก">🏠</a>
 
   <script>
@@ -189,34 +172,42 @@
       avgEl.innerText = "ไม่พบข้อมูลค่าเฉลี่ย";
     }
 
-    // ฟังก์ชันตรวจสอบแนวหน้าจอมือถือ
+    // ตรวจสอบแนวหน้าจอมือถือ
     function isPortrait() {
       return window.matchMedia("(orientation: portrait)").matches;
     }
 
-    function checkOrientationAndShowBtn() {
+    function checkOrientationAndToggleFullscreenBtn() {
       if (isPortrait()) {
-        fullscreenBtn.style.display = "block";
+        fullscreenBtn.style.display = "flex";
       } else {
         fullscreenBtn.style.display = "none";
       }
     }
 
-    // เรียกครั้งแรกและเมื่อเปลี่ยน orientation
-    checkOrientationAndShowBtn();
-    window.addEventListener('resize', checkOrientationAndShowBtn);
-    window.addEventListener('orientationchange', checkOrientationAndShowBtn);
+    // เรียกครั้งแรก และเมื่อเปลี่ยน orientation
+    checkOrientationAndToggleFullscreenBtn();
+    window.addEventListener('resize', checkOrientationAndToggleFullscreenBtn);
+    window.addEventListener('orientationchange', checkOrientationAndToggleFullscreenBtn);
 
-    // ฟังก์ชันเข้าสู่ fullscreen mode
-    fullscreenBtn.addEventListener('click', () => {
+    // ฟังก์ชันเข้าสู่ fullscreen และพยายามล็อคหน้าจอแนวนอน
+    fullscreenBtn.addEventListener('click', async () => {
       const elem = document.documentElement;
+      try {
+        if (elem.requestFullscreen) {
+          await elem.requestFullscreen();
+        } else if (elem.webkitRequestFullscreen) { /* Safari */
+          await elem.webkitRequestFullscreen();
+        } else if (elem.msRequestFullscreen) { /* IE11 */
+          await elem.msRequestFullscreen();
+        }
 
-      if (elem.requestFullscreen) {
-        elem.requestFullscreen();
-      } else if (elem.webkitRequestFullscreen) { /* Safari */
-        elem.webkitRequestFullscreen();
-      } else if (elem.msRequestFullscreen) { /* IE11 */
-        elem.msRequestFullscreen();
+        // พยายามล็อคหน้าจอเป็นแนวนอน
+        if (screen.orientation && screen.orientation.lock) {
+          await screen.orientation.lock('landscape');
+        }
+      } catch (err) {
+        console.warn('ไม่สามารถเข้าสู่โหมดเต็มหน้าจอหรือล็อคหน้าจอแนวนอนได้:', err);
       }
     });
   </script>
